<resources>
    <string name="app_name" translatable="false">MovieCatalog</string>
    <string name="movie_show">Movie Show</string>
    <string name="tv_show">Tv Show</string>
    <string name="watchNow">Sudah Rilis</string>
    <string name="content_description">Content Description</string>
    <string name="date_release">Date Release</string>
    <string name="title">Title</string>
    <string name="status">Status </string>
    <string name="synopsis">Synopsis </string>

    <string name="text_date">10 Januari 2020</string>
    <string name="title_rilis">Rilis</string>

    <string name="informationTAB">Information</string>
    <string name="movieTAB">Movie</string>
    <string name="tvTAB">TV</string>
    <string name="Trailer">Trailer</string>
    <string name="warningToast">Periksa internet anda</string>
    <string name="errorToast">Periksa Internet Anda</string>

    <string name="shareText">Bagikan_Film : %s</string>
    <string name="shareTitle">Bagikan Film ini Sekarang</string>

    <string name="linkPoster">https://image.tmdb.org/t/p/w780/</string>
    <string name="comingSoon">Akan Tayang</string>
    <string name="popularity">Popularity</string>
    <string name="original_name">Original Name</string>
    <string name="detail_information">Detail Information</string>
    <string name="genre">Genre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
</resources>